--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </filter>
     </defs>
 </svg>
-          <h1 class="special">Passionate Web3 community buildings <br> sending good vibes one hug at a time</h1> 
+          <h1 class="special">Passionate Web3 community builders <br> sending good vibes one hug at a time</h1> 
         </div>
       </div>
 </div>
