--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li><a href="https://twitter.com/0xHug"><i class="fab fa-twitter"></i></a></li>
         <li><a href="#"><i class="fa-brands fa-discord"></i></a></li>
 
-        <div class="menu-bg" id="menu-bg"></div>
+        <!-- <div class="menu-bg" id="menu-bg"></div>
         <div id="menu">
          <div id="menu-bar" onclick="menuOnClick()">
         <div id="bar1" class="bar"></div>
@@ -66,7 +66,21 @@
           <li><a href="#work">Work</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
-      </nav>
+      </nav> -->
+
+      <input type="checkbox" id="active">
+    <label for="active" class="menu-btn"><span></span></label>
+    <label for="active" class="close"></label>
+    <div class="wrapper">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </div>
+
+
       </div>
       </ul>
       
@@ -116,7 +130,7 @@
 </div>
 
 <div id="about" class="what">
-        <h4 >We are a group of experienced multi-lingo community builders passionate about nurturing culture and friendship in the metaverse. We help Web3 ventures build communities, facillitate marketing and social media strategies and hug their communities.</h4>
+        <h4 >We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
         <div class="about-text-left">
           <h5 class="gs_reveal">Community Building</h5>
 
@@ -152,7 +166,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/tom.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#">@think_flexible</a></h2>
+              <h2><a href="#">Tom</a></h2>
               <h3 class="position">Lead Advisor & Strategist</h3>
             </div>
             <div class="skills-container">
@@ -164,7 +178,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/matt.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@y_kymin</a></h2>
+              <h2><a href="#"></a>Matt</a></h2>
               <h3 class="position">-</h3>
             </div>
             <div class="skills-container">
@@ -176,7 +190,7 @@
            <div class="card">
             <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@egg_liquid</a></h2>
+              <h2><a href="#"></a>LiquidEggWhite</a></h2>
               <h3 class="position">Chief Meme Officer </h3>
             </div>
             <div class="skills-container">
@@ -188,7 +202,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/grindin.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@grind1n</a></h2>
+              <h2><a href="#"></a>grindin</a></h2>
               <h3 class="position">-</h3>
             </div>
             <div class="skills-container">
@@ -200,9 +214,9 @@
          
 
           <div class="card">
-            <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
+            <div class="avatar"><img src="./images/jboy.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@jboy</a></h2>
+              <h2><a href="#"></a>jboy</a></h2>
               <h3 class="position">-</h3>
             </div>
             <div class="skills-container">
@@ -214,7 +228,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/bobo.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@bobolaile</a></h2>
+              <h2><a href="#"></a>Bobo</a></h2>
               <h3 class="position">-</h3>
             </div>
             <div class="skills-container">
@@ -225,7 +239,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@michttc3</a></h2>
+              <h2><a href="#"></a>Michelle</a></h2>
               <h3 class="position">-</h3>
             </div>
             <div class="skills-container">
@@ -234,7 +248,7 @@
             </div>
           </div>
           <div class="card">
-            <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
+            <div class="avatar"><img src="./images/rach.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>@0x_rach</a></h2>
               <h3 class="position">-</h3>
@@ -247,7 +261,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/niqueja.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@Niqueja</a></h2>
+              <h2><a href="#"></a>Niqueja</a></h2>
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
@@ -260,7 +274,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@Kazumi</a></h2>
+              <h2><a href="#"></a>Kazumi</a></h2>
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
@@ -359,7 +373,7 @@ Community management <br><br>
 </div>
 
 <div id="intro" class="blah">
-  <img class="js-img-load" src="#">
+  <img class="js-img-load">
 </div>
 
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js'></script>
