--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             <div class="avatar"><img src="./images/grindin.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>grindin</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Community Degen & Strategist</h3>
             </div>
             <div class="skills-container">
               <p><br>Previous healthcare PM. Community Lead of Capsule House and Secret Garden. Jpeg collector and crypto degen since 2017.</p>
@@ -217,7 +217,7 @@
             <div class="avatar"><img src="./images/jboy.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>jboy</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Community Lead & Strategist</h3>
             </div>
             <div class="skills-container">
               <p><br>Previously community lead on GENE_SIS/ESION projects (225k/80k Twitter). The strongest diamond hands if you've ever seen one (i.e. has trouble taking profit). Somewhat multilingual. </p>
@@ -237,13 +237,13 @@
             </div>
           </div>
           <div class="card">
-            <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
+            <div class="avatar"><img src="./images/michelle.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>Michelle</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Creative Design Lead</h3>
             </div>
             <div class="skills-container">
-              <p><br>All things graphic design. Working with 0xHUG to create the most exquisite graphics and videos </p>
+              <p><br>Creative Design Lead at 0xhug, Sustainability & Innovation Consultant, Urban Planning Grad @ Columbia </p>
               <a href="https://twitter.com/michttc3"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -251,7 +251,7 @@
             <div class="avatar"><img src="./images/rach.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>@0x_rach</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Creative Writer & Marketer</h3>
             </div>
             <div class="skills-container">
               <p><br>Smart Words </p>
