--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <label for="active" class="close"></label>
     <div class="wrapper">
       <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#work">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -101,7 +101,7 @@
 
 
 
-<div class="hero">
+<div id="home" class="hero">
       <div id="magic"></div>
         <div class="playground">
         <div class="bottomPosition">
@@ -130,7 +130,7 @@
 </div>
 
 <div id="about" class="what">
-        <h4 >We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
+        <h4 class="gs_reveal">We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
         <div class="about-text-left">
           <h5 class="gs_reveal">Community Building</h5>
 
