--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
             <div class="avatar"><img src="./images/matt.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>Matt</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Chief Dev & Manager</h3>
             </div>
             <div class="skills-container">
-              <p><br>Avid NFT collector and dabbler in games. Supporting 0xHUG builders </p>
+              <p><br>Dev by profession, NFT collector by passion, and gamer by obsession. Member of FlamingoDAO, NeonDAO, and others. Ex-MSFT </p>
               <a href="https://twitter.com/y_kymin"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -169,7 +169,7 @@
               <h3 class="position">Chief Meme Officer </h3>
             </div>
             <div class="skills-container">
-              <p><br>Chief Meme Officer (CMO) of 0xHUG, Cat mom, Ex-J.P. Morgan, Penn graduate, software sales engineer irl, CMO of Stampu NFT </p>
+              <p><br>Chief Meme Officer (CMO) of 0xHUG, Cat mom, software sales engineer irl, CMO of Stampu NFT </p>
               <a href="https://twitter.com/egg_liquid"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -204,7 +204,7 @@
             <div class="avatar"><img src="./images/bobo.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>Bobo</a></h2>
-              <h3 class="position">-</h3>
+              <h3 class="position">Dev & Strategist</h3>
             </div>
             <div class="skills-container">
               <p><br>0xHUG's first intern, ex tradfi trader soon to be in defi </p>
@@ -218,7 +218,7 @@
               <h3 class="position">Creative Design Lead</h3>
             </div>
             <div class="skills-container">
-              <p><br>Creative Design Lead at 0xhug, Sustainability & Innovation Consultant, Urban Planning Grad @ Columbia </p>
+              <p><br>Creative Design Lead at 0xhug, Sustainability & Innovation Consultant </p>
               <a href="https://twitter.com/michttc3"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
@@ -229,7 +229,7 @@
               <h3 class="position">Creative Writer & Marketer</h3>
             </div>
             <div class="skills-container">
-              <p><br>Smart Words </p>
+              <p><br>Creative writer, former journalist, & NFT collector. Creating marketing content and lores with 0xHUG.</p>
               <a href="https://twitter.com/thekeenspartan"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
