--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </defs>
 </svg>
 
-<h1>hugs for you</h1>
+<h1 class="special"><br><br>Passionate Web3 Community Builders<br> sending Good Vibes one hug at a time</h1>
 
 </div>
 
@@ -80,6 +80,7 @@
 
 
 <div id="go-about" class="what">
+  <h6 class="gs_reveal">Our Services</h6>
     <h4 class="gs_reveal">We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
   <div class="about-text-left">
     <h5 class="gs_reveal">Community Building</h5>
