--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
 
 <div class="hero">
 
+  
+
+
+
 <svg id="svgWrap_1" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="-10 -10 1000 450">
   <g>
     <path id="id3_1" d="M 36.328 23.763 A 61.841 61.841 0 0 0 22.801 37.351 A 81.236 81.236 0 0 0 17.773 45.386 Q 12.005 55.835 7.051 70.801 A 114.391 114.391 0 0 0 4.893 78.157 Q 0.001 97.111 0.001 122.101 A 214.626 214.626 0 0 0 1.666 149.393 A 161.963 161.963 0 0 0 8.701 180.601 A 118.75 118.75 0 0 0 13.635 192.57 A 93.017 93.017 0 0 0 23.251 208.501 A 60.976 60.976 0 0 0 34.626 219.893 A 81.395 81.395 0 0 0 47.851 228.151 Q 63.601 236.101 84.001 236.101 Q 104.401 236.101 119.851 228.301 Q 135.301 220.501 144.001 208.501 Q 159.38 187.601 164.652 156.982 A 204.081 204.081 0 0 0 167.401 122.401 A 201.971 201.971 0 0 0 167.366 118.619 A 178.842 178.842 0 0 0 158.401 65.101 A 116.441 116.441 0 0 0 154.281 54.46 A 94.017 94.017 0 0 0 144.151 36.901 Q 135.301 24.901 119.851 16.801 A 68.312 68.312 0 0 0 101.954 10.481 A 89.463 89.463 0 0 0 83.701 8.701 A 92.384 92.384 0 0 0 70.055 9.676 A 71.51 71.51 0 0 0 47.251 16.951 A 82.071 82.071 0 0 0 36.328 23.763 Z M 114.301 123.901 L 114.301 122.101 Q 114.301 86.241 103.479 71.707 A 23.413 23.413 0 0 0 83.701 61.801 Q 56.508 61.801 53.48 109.54 A 201.281 201.281 0 0 0 53.101 122.251 A 181.087 181.087 0 0 0 54.122 142.41 Q 56.406 162.668 63.795 172.74 A 23.096 23.096 0 0 0 83.401 182.701 Q 111.666 182.701 114.076 133.502 A 196.455 196.455 0 0 0 114.301 123.901 Z"/>
@@ -72,7 +76,7 @@
   </defs>
 </svg>
 
-<h1 class="special"><br><br>Passionate Web3 Community Builders<br> sending Good Vibes one hug at a time</h1>
+<h1 class="special"><br>Passionate Web3 Community Builders<br> sending Good Vibes one hug at a time</h1>
 
 </div>
 
@@ -80,6 +84,45 @@
 
 
 <div id="go-about" class="what">
+  <div id="parallax">
+
+  <aside id="mouse-parallax" class="parallax" data-parallax="true" data-scroll-speed="0.27" data-direction="down"
+      style="transform: translate3d(0px, 0px, 0px);">
+      <ul id="scene">
+          <li class="layer" data-depth="0.133" data-depth-mobile="0.23">
+              <div class="canvas group1" data-parallax="true" data-scroll-speed="0.35" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+
+          <li class="layer" data-depth="0.083" data-depth-mobile="0.32">
+              <div class="canvas group2" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group3" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+
+          <li class="layer" data-depth="0.103" data-depth-mobile="0.38">
+              <div class="canvas group4" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group5" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group6" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+      </ul>
+  </aside>
+</div>
+<!-- <div class="container-parallax">
+    <ul id="scene">
+      <li class="layer" data-depth="1"><img src="/images/cat.png"/></li>
+      <li class="layer" data-depth="-1"><img src="/images/dj.png"/></object></li>
+      <li class="layer" data-depth="2"><img src="/images/cool.png"/></object></li>
+      <li class="layer" data-depth="2"><img src="/images/heart.png"/></object></li>
+    </ul>
+  </div>   -->
   <h6 class="gs_reveal">Our Services</h6>
     <h4 class="gs_reveal">We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
   <div class="about-text-left">
@@ -344,6 +387,7 @@ Partnership and collaboration management
 <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r125/three.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery.imagesloaded/3.2.0/imagesloaded.pkgd.min.js'></script>
