--- a/index.html
+++ b/index.html
@@ -309,12 +309,8 @@
                    </div>
                    <div class="card__side card__side--back card__side--back">
                        <div class="card__text">Altava Second Skin: Metamorphosis is a collection of 6,765 NFTs uniquely rendered 3D avatars on the Ethereum blockchain created by ALTAVA. Inspired by the symbiotic relationship we have with our environment; intertwining nature with luxury fashion in the metaverse. <br><br>
-                        0xHUG’s role: 
-<br>Community management
-<br>Marketing and social media management
-<br>NFT strategy advisory including but not limited to launch, roadmap and tokenomics
- <br><br>
-<a href="https://twitter.com/altavagroup"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+                        0xHUG’s role: <br>Community management<br>Marketing and social media management<br>NFT strategy advisory including but not limited to launch, roadmap and tokenomics <br><br>
+                      <a href="https://twitter.com/altavagroup"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                        </div>
                        
                    </div>
