--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     <nav>
       <div class="nav-container">
         <div class="logo">
-          <a href="index.html" class="navbar-brand">
-        0xhug
-      </a>
+          <a href="index.html" class="navbar-brand">0xhug</a>
         </div>
-        <ul>
-          <li><a href="#go-service">Services</a></li>
-          <li><a href="#go-about">About</a></li>
-          <li><a href="#go-contact">Contact</a></li>
+        <ul class="navbar-collapse" id="navbarSupportedContent">
+          <li class="nav-item"><a href="#go-service">Services</a></li>
+          <li class="nav-item"><a href="#go-about">About</a></li>
+          <li class="nav-item"><a href="#go-contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -52,6 +50,38 @@
     
   </div>
 </nav> -->
+
+<div id="parallax">
+
+  <aside id="mouse-parallax" class="parallax" data-parallax="true" data-scroll-speed="0.27" data-direction="down"
+      style="transform: translate3d(0px, 0px, 0px);">
+      <ul id="scene">
+          <li class="layer" data-depth="0.133" data-depth-mobile="0.23">
+              <div class="canvas group1" data-parallax="true" data-scroll-speed="0.35" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+
+          <li class="layer" data-depth="0.083" data-depth-mobile="0.32">
+              <div class="canvas group2" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group3" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+
+          <li class="layer" data-depth="0.103" data-depth-mobile="0.38">
+              <div class="canvas group4" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group5" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+
+              <div class="canvas group6" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
+                  style="transform: translate3d(0px, 0px, 0px);"></div>
+          </li>
+      </ul>
+  </aside>
+</div>
 
 
 <div id="go-home" class="hero">
@@ -86,37 +116,7 @@
 
 
 <div id="go-service" class="what">
-  <div id="parallax">
-
-  <aside id="mouse-parallax" class="parallax" data-parallax="true" data-scroll-speed="0.27" data-direction="down"
-      style="transform: translate3d(0px, 0px, 0px);">
-      <ul id="scene">
-          <li class="layer" data-depth="0.133" data-depth-mobile="0.23">
-              <div class="canvas group1" data-parallax="true" data-scroll-speed="0.35" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-          </li>
-
-          <li class="layer" data-depth="0.083" data-depth-mobile="0.32">
-              <div class="canvas group2" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-
-              <div class="canvas group3" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-          </li>
-
-          <li class="layer" data-depth="0.103" data-depth-mobile="0.38">
-              <div class="canvas group4" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-
-              <div class="canvas group5" data-parallax="true" data-scroll-speed="0.226" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-
-              <div class="canvas group6" data-parallax="true" data-scroll-speed="0.31" data-direction="up"
-                  style="transform: translate3d(0px, 0px, 0px);"></div>
-          </li>
-      </ul>
-  </aside>
-</div>
+  
 <!-- <div class="container-parallax">
     <ul id="scene">
       <li class="layer" data-depth="1"><img src="/images/cat.png"/></li>
@@ -303,7 +303,7 @@
            <div class="col">
                <div class="card_project">
                    <div class="card__side card__side--front">
-                       <div class="project-card__cover" style="background-image: url(AltavaGroup_LogoMark_onLight.png);"></div>
+                       <div class="project-card__cover" style="background-image: url(Altava_Cropped.png);"></div>
                        <div class="card__text">
                          FRONT</div>
                    </div>
@@ -319,7 +319,7 @@
            <div class="col">
                <div class="card_project">
                 <div class="card__side card__side--front">
-                  <div class="project-card__cover" style="background-image: url(humxn.png);"></div>
+                  <div class="project-card__cover" style="background-image: url(humxn_cropped.png);"></div>
                   <div class="card__text">
                     FRONT</div>
               </div>
