--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
            <div class="col">
                <div class="card_project">
                 <div class="card__side card__side--front">
-                  <div class="project-card__cover" style="background-image: url(humxn_cropped.png);"></div>
+                  <div class="project-card__cover" style="background-image: url(humxn_Cropped.png);"></div>
                   <div class="card__text">
                     FRONT</div>
               </div>
