--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           </div>
           
           <div class="card">
-            <div class="avatar"><img src="./images/liquid.png" alt="Avatar"></div>
+            <div class="avatar"><img src="./images/kazumi.png" alt="Avatar"></div>
             <div class="summary">
               <h2><a href="#"></a>Kazumi</a></h2>
               <h3 class="position">Mod</h3>
