--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
               <h3 class="position">Community Lead & Strategist</h3>
             </div>
             <div class="skills-container">
-              <p><br>Previously community lead on GENE_SIS/ESION projects (225k/80k Twitter). The strongest diamond hands if you've ever seen one (i.e. has trouble taking profit). Somewhat multilingual. </p>
+              <p><br>Previously community lead on GENE_SIS/ESION projects (225k/80k Twitter). Strongest diamond hands if you've ever seen one. Somewhat multilingual. </p>
               <a href="https://twitter.com/jboyxbt"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
