--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
           <div class="card">
             <div class="avatar"><img src="./images/rach.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>@0x_rach</a></h2>
-              <h3 class="position">Creative Writer & Marketer</h3>
+              <h2><a href="#"></a>0x_rach</a></h2>
+              <h3 class="position">Creative Writer & Intern</h3>
             </div>
             <div class="skills-container">
               <p><br>Creative writer, former journalist, & NFT collector. Creating marketing content and lores with 0xHUG.</p>
