--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     FRONT</div>
               </div>
               <div class="card__side card__side--back card__side--back">
-                  <div class="card__text">HUMXN is a collection of 10,000 unique, hyper-realistic "human" avatars who have adapted to the different worlds and environments they live in. They have been designed by @Grif who has directed branded films and created art for brands such as Apple, Nike, HP, Givenchy, & Louis Vuitton. The HUMXN project was incubated to explore what it means to have, not just a pfp, but an avatar that resembles our true selves in this world.<br><br>
+                  <div class="card__text">HUMXN is a collection of unique, hyper-realistic "human" avatars who have adapted to the different worlds and environments they live in. They have been designed by @Grif who has directed branded films and created art for brands such as Apple, Nike, HP, Givenchy, & Louis Vuitton. The HUMXN project was incubated to explore what it means to have, not just a pfp, but an avatar that resembles our true selves in this world.<br><br>
                     
                     0xHUG role:
                     <br>Community management
