--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   </div>
 
   <h6 class="gs_reveal">Our Services</h6>
-    <h4 class="gs_reveal">We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positice culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
+    <h4 class="gs_reveal">We are Web3 native, multi-lingo community builders. Our team is passionate about nurturing positive culture and friendships in the metaverse. We help Web3 projects build community, keep them engaged, and facilitate  marketing strategies to grow.</h4>
     <div class="about-text-left">
       <h5 class="gs_reveal">Community Building</h5>
       <div class="sub-text" >
