--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <h5 class="gs_reveal">Community Building</h5>
       <div class="sub-text" >
         <p class="gs_reveal">We provide end-to-end service for community management - from setting up customized discord, implementing security measurement, to onboarding moderators and ongoing facilitation of community activities.
-        Well-versed in global culture, Our multiple lingo team members can tap into international communities with ease.</p>
+        Well-versed in global culture, our multiple lingo team members can tap into international communities with ease.</p>
       </div>
     </div>
     
