--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                    </div>
                    <div class="card__side card__side--back card__side--back">
                        <div class="card__text">Altava Second Skin: Metamorphosis is a collection of 6,765 NFTs uniquely rendered 3D avatars on the Ethereum blockchain created by ALTAVA. Inspired by the symbiotic relationship we have with our environment; intertwining nature with luxury fashion in the metaverse. <br><br>
-                        0xHUG’s role: <br>Community management<br>Marketing and social media management<br>NFT strategy advisory including but not limited to launch, roadmap and tokenomics <br><br>
+                        0xhug’s role: <br>Community management<br>Marketing and social media management<br>NFT strategy advisory including but not limited to launch, roadmap and tokenomics <br><br>
                       <a href="https://twitter.com/altavagroup"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                        </div>
                        
@@ -285,7 +285,7 @@
               <div class="card__side card__side--back card__side--back">
                   <div class="card__text">HUMXN is a collection of unique, hyper-realistic "human" avatars who have adapted to the different worlds and environments they live in. They have been designed by @Grif who has directed branded films and created art for brands such as Apple, Nike, HP, Givenchy, & Louis Vuitton. The HUMXN project was incubated to explore what it means to have, not just a pfp, but an avatar that resembles our true selves in this world.<br><br>
                     
-                    0xHUG role:
+                    0xhug's role:
                     <br>Community management
 <br>Marketing and social media management 
 <br>NFT strategy advisory including but not limited to launch and roadmap
