--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <li>Community management</li>
                         <li>Marketing and social media management</li>
                         <li>NFT strategy advisory including but not limited to launch, roadmap and tokenomics</li>
-                         <br><br>
+                         <br>
                         </ul>
                       <a href="https://twitter.com/altavagroup"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                        </div>
@@ -299,7 +299,7 @@
                     <li>NFT strategy advisory including but not limited to launch and roadmap</li>
                     <li>Partnership and collaboration management</li>
                   </ul>
-<br><br><a href="https://twitter.com/_HUMXN_"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+<br><a href="https://twitter.com/_HUMXN_"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
                     </div>
                     
                    </div>
