--- a/index.html
+++ b/index.html
@@ -99,15 +99,15 @@
       <h5 class="gs_reveal">Community Building</h5>
       <div class="sub-text" >
         <p class="gs_reveal">We provide end-to-end services for community management - from setting up customized Discord, implementing security processes, to onboarding moderators and ongoing facilitation of community activities.
-        Well-versed in global culture, our multiple lingo team members can tap into international communities with ease.</p>
+        Well-versed in global culture, our multi-lingo team members can tap into international communities with ease.</p>
       </div>
     </div>
     
     <div class="about-text-right">
-      <h5 class="gs_reveal">Marketing & Social Media </h5>
+      <h5 class="gs_reveal">Social Media Marketing & Analytics </h5>
       <div class="sub-text">
           <p class="gs_reveal">We tailor marketing and social media strategies based on your preferences and goals. Whether your vibe is max meme or academia papers, we’ve got you covered. 
-          Our in-house experts will facilitate your social media calendar and content creation on demand. 
+          Our in-house experts will utilize DAO tooling to curate Web3 data metrics to facilitate your social media calendar and content creation on demand. 
           </p>
         </div>
     </div>
