--- a/index.html
+++ b/index.html
@@ -214,12 +214,12 @@
           <div class="card">
             <div class="avatar"><img src="./images/rach.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>0x_rach</a></h2>
+              <h2><a href="#"></a>Rach</a></h2>
               <h3 class="position">Creative Writer & Intern</h3>
             </div>
             <div class="skills-container">
               <p><br>Creative writer, former journalist, & NFT collector. Creating marketing content and lores with 0xhug.</p>
-              <a href="https://twitter.com/thekeenspartan"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
+              <a href="https://twitter.com/0x_rach"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div>
           <div class="card">
