--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&family=Nothing+You+Could+Do&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css'>
+  <!-- <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css'> -->
   <link rel="stylesheet" href="./style.css">
 </head>
 
@@ -54,15 +54,16 @@
     </filter>
     </defs>
   </svg>
+  
+</div>
+
+<div id="subtitle">
   <h1 class="special"><br>Passionate Web3 Community Builders<br> sending Good Vibes one hug at a time</h1>
 </div>
 
 
-
-
 <div id="go-service" class="what">
   <div id="parallax">
-
   <aside id="mouse-parallax" class="parallax" data-parallax="true" data-scroll-speed="0.27" data-direction="down"
       style="transform: translate3d(0px, 0px, 0px);">
       <ul id="scene">
@@ -129,7 +130,7 @@
         <div class="avatar"><img src="./images/tom.png" alt="Avatar">
         </div>
             <div class="summary">
-              <h2><a href="#">Tom</a></h2>
+              <h2>Tom</h2>
               <h3 class="position">Lead Advisor & Strategist</h3>
             </div>
             <div class="skills-container">
@@ -142,7 +143,7 @@
         <div class="avatar"><img src="./images/matt.png" alt="Avatar">
         </div>
             <div class="summary">
-              <h2><a href="#"></a>Matt</a></h2>
+              <h2>Matt</h2>
               <h3 class="position">Chief Dev & Manager</h3>
             </div>
             <div class="skills-container">
@@ -155,7 +156,7 @@
         <div class="avatar"><img src="./images/liquid.png" alt="Avatar">
         </div>
             <div class="summary">
-              <h2><a href="#"></a>LiquidEggWhite</a></h2>
+              <h2>LiquidEggWhite</h2>
               <h3 class="position">Chief Meme Officer </h3>
             </div>
             <div class="skills-container">
@@ -168,7 +169,7 @@
         <div class="avatar"><img src="./images/grindin.png" alt="Avatar">
         </div>
             <div class="summary">
-              <h2><a href="#"></a>grindin</a></h2>
+              <h2>grindin</h2>
               <h3 class="position">Community Degen & Strategist</h3>
             </div>
             <div class="skills-container">
@@ -180,7 +181,7 @@
       <div class="card">
             <div class="avatar"><img src="./images/jboy.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>jboy</a></h2>
+              <h2>jboy</h2>
               <h3 class="position">Community Lead & Strategist</h3>
             </div>
             <div class="skills-container">
@@ -192,7 +193,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/bobo.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>Bobo</a></h2>
+              <h2>Bobo</h2>
               <h3 class="position">Dev & Strategist</h3>
             </div>
             <div class="skills-container">
@@ -203,7 +204,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/michelle.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>Michelle</a></h2>
+              <h2>Michelle</h2>
               <h3 class="position">Creative Design Lead</h3>
             </div>
             <div class="skills-container">
@@ -214,7 +215,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/rach.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>Rach</a></h2>
+              <h2>Rach</h2>
               <h3 class="position">Creative Writer & Intern</h3>
             </div>
             <div class="skills-container">
@@ -225,7 +226,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/niqueja.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>Niqueja</a></h2>
+              <h2>Niqueja</h2>
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
@@ -238,7 +239,7 @@
           <div class="card">
             <div class="avatar"><img src="./images/kazumi.png" alt="Avatar"></div>
             <div class="summary">
-              <h2><a href="#"></a>Kazumi</a></h2>
+              <h2>Kazumi/h2>
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
