--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
-              <p><br>Founder of Celestials. Working with 0xhug as Moderator. Mod - @HUMXN. Alpha Lead - @WaifuMoeNFT. 
+              <p><br>Founder of Celestials. Working with 0xhug as Moderator. Alpha Lead - @WaifuMoeNFT. 
               Shot Caller - @UnkaiUnknown & @TheTribe_NFT.  </p>
               <a href="https://twitter.com/Niqueja18"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
@@ -282,7 +282,7 @@
                    </div>
                 </div> 
            </div>
-           <div class="col">
+           <!-- <div class="col">
                <div class="card_project">
                 <div class="card__side card__side--front">
                   <div class="project-card__cover" style="background-image: url(humxn_Cropped.png);"></div>
@@ -302,7 +302,7 @@
                     
                    </div>
                 </div> 
-           </div>
+           </div> -->
           
      </section> 
 
