--- a/index.html
+++ b/index.html
@@ -239,11 +239,11 @@
           <div class="card">
             <div class="avatar"><img src="./images/subparceiling.png" alt="Avatar"></div>
             <div class="summary">
-              <h2>subparceiling</h2>
+              <h2>subpar</h2>
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
-              <p><br>text</p>
+              <p><br>Working with 0xhug as Moderator. Head mod @Dreamy. Partnerships Lead @pestlemorarSEA</p>
               <a href="https://twitter.com/subparceiling"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div> 
