--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <h3 class="position">Mod</h3>
             </div>
             <div class="skills-container">
-              <p><br>Working with 0xhug as Moderator. Head mod @Dreamy. Partnerships Lead @pestlemorarSEA</p>
+              <p><br>Head mod @Dreamy. Partnerships Lead for Pestle and Mortar Clothing. Economics grad. Lowkey a weeb</p>
               <a href="https://twitter.com/subparceiling"><i class="fa-brands fa-twitter" aria-hidden="true"></i></a>
             </div>
           </div> 
